--- a/олег.html
+++ b/олег.html
@@ -50,6 +50,16 @@
             margin: 10px;
             border-radius: 5px;
         }
+        .oleg11 {
+            background-color: #0f0;
+            color: #000;
+            border: none;
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            margin: 10px;
+            border-radius: 5px;
+        }
         
         button:hover {
             background-color: #0a0;
@@ -247,7 +257,7 @@
         <div id="end" class="game-container hidden">
             <h2>ПОЗДРАВЛЯЕМ!</h2>
             <p>ОMjAg0LzQsNGA0YLQsCAxMDMwINCz0L7QtNCwINC+0LvQtdCzINC/0YDQvtC40LfQvtGI0LXQuyDQvdCw0LnQtNC40YLQtSDRgSDQutCw0LrQvtC5INGB0LrQvtGA0L7RgdGC0YzRjiDQvtC70LXQsy4=</p>
-            <button onclick="location.reload()">УДАЛЯЙ БРАУЗЕР</button>
+            <a href="супер.html" class="oleg11">Я ВСЕ ЕЩЕ В ТВОЕЙ RX580 ТЫК СЮДА</a>
         </div>
     </div>
     
