--- a/index.html
+++ b/index.html
@@ -646,14 +646,9 @@
                 </div>
                 <div class="footer-section">
                     <h3>Контакты</h3>
-                    <p>Москва, ул. Зеленая, 42</p>
+                    <p>Москва, ул. олег, 42</p>
                     <p>Тел: +7 (999) 123-45-67</p>
-                    <p>Email: info@plantsteam.ru</p>
-                    <div class="social-links">
-                        <a href="#" class="social-link">VK</a>
-                        <a href="#" class="social-link">TG</a>
-                        <a href="#" class="social-link">YT</a>
-                    </div>
+                    <p>Email: info@нету</p>
                 </div>
             </div>
             <div class="copyright">
